# esp32-breathing

./: .gitignore  CLAUDE.md  README.md  SPEC.md  capture.py  csi_breathing.py  csi_protocol.py  sdkconfig.defaults
docs/superpowers/plans/: 2026-05-14-binary-csi-protocol.md
docs/superpowers/specs/: 2026-05-14-binary-csi-protocol-design.md
main/: Kconfig.projbuild  app_main.c  csi_protocol.h  env_sensors.c  env_sensors.h
smart-plug/: .gitignore  CMakeLists.txt  SPEC.md  sdkconfig.defaults
smart-plug/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml  plug_http.c  plug_http.h  plug_identity.c  plug_identity.h  plug_mdns.c  plug_mdns.h  plug_relay.c  plug_relay.h  plug_wifi.c  plug_wifi.h
tests/: conftest.py  test_binary_loader.py  test_binary_protocol.py  test_capture_pipe.py  test_sliding_confidence.py
