idf_component_register(
    SRCS
        "app_main.c"
        "plug_relay.c"
        "plug_identity.c"
        "plug_wifi.c"
        "plug_mdns.c"
        "plug_http.c"
    INCLUDE_DIRS "."
    REQUIRES
        esp_wifi
        esp_netif
        esp_event
        nvs_flash
        esp_http_server
        esp_timer
        json
        driver
        mdns
)
